# dencify-pc

./: .gitignore  README.md  main.py  pyproject.toml
data/raw/csv/: csv_data_here.txt
data/raw/las/: las_data_here.text
data/raw/rgb/: rgb_data_here.txt
densify_pc/: dataprocessor.py  projection.py  utils.py
result/: result_here.txt
tests/: test_dataprocessor.py  test_utils.py
