[tool.poetry]
name = "myenv-iib"
version = "0.1.0"
description = "Poetry Environment for IIB Masters Project"
authors = ["ehp24 <ep590@cantab.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.9.0.80"
scipy = "^1.12.0"
glob2 = "^0.7"
pandas = "^2.2.1"
laspy = "^2.5.3"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
